Backend/gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-gateway-deployment
  namespace: cvalyze
  labels:
    app: cv-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-gateway
  template:
    metadata:
      labels:
        app: cv-gateway
      annotations:       
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: cv-gateway
          image: afzal23/cv_gateway:v18
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"       # 0.25 vCPU
              memory: "64Mi"   # 512 MB RAM
            limits:
              cpu: "200m"       # 0.5 vCPU
              memory: "256Mi"     # 1 GB RAM
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
